# task-manager

./: .gitignore  Dockerfile  create_db.py  main.py  pyproject.toml  requirements.txt  requiremets.txt  task_manager.db
alembic/: env.py
alembic/versions/: 8fefd37cdff2_initial_schema.py  e5fbafe1f301_task_status_and_priority_enums.py  f505cd75ecc0_initial_schema.py
app/: .env  db_init.py  main.py
app/api/: deps.py
app/api/routes/: __init__.py  project_members.py  project_template.py  projects.py  roles.py  task_type.py  tasks.py  users.py
app/core/: config.py  database.py  exception_handlers.py  exceptions.py  lifespan.py  models.py  security.py
app/crud/: project.py  project_member.py  project_template.py  role.py  task.py  task_type.py  user.py
app/models/: __init__.py  enum.py  history.py  project.py  project_member.py  project_template.py  role.py  task.py  task_type.py  user.py
app/schemas/: project.py  project_member.py  project_template.py  role.py  task.py  task_type.py  user.py
app/seeds/: base.py  run.py  run_seeds.py  seed_project_templates.py  seed_roles.py  seed_task_desc.py  seed_user.py
docs/: db_schema.md
